--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fastify/jwt": "^9.1.0",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.2",
+    "@fastify/websocket": "^11.0.2",
     "@prisma/client": "^6.7.0",
     "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.13",
@@ -28,6 +29,7 @@
     "@faker-js/faker": "^9.7.0",
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^22.15.17",
+    "@types/ws": "^8.18.1",
     "eslint": "8.56.0",
     "prisma": "^6.7.0",
     "tsx": "^4.19.4",
